- Fixing seek()/truncate() - Tests for those methods - Updating qunit - Updating flexbox in demo

--- a/demos/playground/css/app.css
+++ b/demos/playground/css/app.css
@@ -227,7 +227,7 @@ body #container {
 
 header, footer {
   padding: 2px 0;
-  display: -webkit-flexbox;
+  display: -webkit-flex;
   /*display: -moz-box;*/
   border-radius: 5px;
   box-shadow: 0 5px 5px #ccc;
@@ -270,18 +270,18 @@ footer {
   -o-transform: translateY(500px);
 }
 header > * {
-  -webkit-flex-item-align: center;
-  -ms-flex-item-align: center;
-  -o-flex-item-align: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -o-align-items: center;
+  -ms-align-items: center;
   display: inline-block;
 }
 header > div {
-  width: -webkit-flex(50%);
-  width: -ms-flex(50%);
-  width: -o-flex(50%);
+  -webkit-flex: 1;
+  -moz-flex: 1;
+  -ms-flex: 1;
+  -o-flex: 1;
   text-align: right;
-  margin-top: -14px;
-  vertical-align: middle;
 }
 header > div > span {
   border-right: 2px solid rgba(255,255,255,0.25);
@@ -306,8 +306,7 @@ header h1 {
   font-size: 21px;
   text-shadow: 0px -1px black;
   color: white;
-  margin: -16px 0 0 0;
-  vertical-align: middle;
+  margin: 0;
 }
 header h1 a {
   color: inherit;
